# blocksim

./: .copier-answers.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.rst  TODO  azure-pipelines.yml  base_requirements.txt  build.py  clean.sh  config.yml  dev_requirements.txt  dev_requirements_3_8.txt  dev_requirements_3_9.txt  environment.yml  environment_test.yml  export_tar.sh  gen_baseline.sh  gen_test_images.sh  mkdoc.sh  pyproject.toml  qtest.py  readthedocs.yml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  win-environment.yml  wip.py  wip_test.py
.circleci/: config.yml
blocksim/: ABaseNode.py  B3DPlotter.py  DatabaseModel.py  EarthPlotter.py  Frame.py  Graphics.py  LogFormatter.py  Logger.py  LoggerSpec.py  Node.py  Peak.py  Simulation.py  __init__.py  __main__.py  constants.py  exceptions.py  main.py  testing.py  utils.py
blocksim/OFDM/: requirements.txt
blocksim/Quadcopter/: Motor.py  Quadri.py
blocksim/blocks/: Channel.py  Controller.py  DFT.py  Estimator.py  FEC.py  Generic.py  NPSS.py  Network.py  OFDMA.py  ProcessingBlock.py  QPSKMod.py  Route.py  Satellite.py  Sensors.py  SerialParallel.py  SetPoint.py  System.py
blocksim/control/: Controller.py  Earth6DDLPosition.py  Estimator.py  GNSSReceiver.py  GNSSTracker.py  IMU.py  Network.py  Route.py  Sensors.py  SetPoint.py  System.py  __init__.py
blocksim/core/: ABaseNode.py  CircularBuffer.py  Frame.py  Generic.py  Node.py  __init__.py
blocksim/db/: __init__.py
blocksim/dsp/: ADSPComputer.py  ADSPNumeric.py  ActiveAntenna.py  AntennaNetwork.py  BOCMod.py  Channel.py  CircularBuffer.py  DFT.py  DSPAWGN.py  DSPChannel.py  DSPFilter.py  DSPLine.py  DSPMap.py  DSPSignal.py  DSPSpectrogram.py  DSPSpectrum.py  DelayLine.py  FEC.py  NPSS.py  OFDMA.py  PSKMod.py  Peak.py  QPSKMod.py  SerialParallel.py  __init__.py  group_delays.py  klobuchar.py  utils.py
blocksim/gnss/: GNSSReceiver.py  GNSSTracker.py  GNSScodegen.py  __init__.py  utils.py
blocksim/graphics/: AxeSpec.py  B3DPlotter.py  BAxe.py  BFigure.py  BLayout.py  EarthPlotter.py  FigureSpec.py  GPlottable.py  GraphicSpec.py  Plottable.py  RTPlotter.py  __init__.py  enums.py  wip.py
blocksim/loggers/: CSVLogger.py  Logger.py  LoggerSpec.py  Parameter.py  ParquetLogger.py  PickleLogger.py  PsqlLogger.py  XlsLogger.py  __init__.py
blocksim/quadcopter/: AttPilot.py  IMU.py  Motor.py  Quadri.py  VTOLPilot.py  __init__.py  constants.py  exceptions.py
blocksim/resources/: dummy.txt
blocksim/satellite/: Satellite.py  Trajectory.py  __init__.py
blocksim/source/: Satellite.py  Trajectory.py
blocksim/tools/: computation.py  config.py  gnss_sim.py  plot.py  update_reqs.py
dev/: Makefile_Doc.mk  combinatoire_graphics.xlsx  dev_requirements_3_10.txt  dev_requirements_3_8.txt  dev_requirements_3_9.txt  dsp.DSPSignal.integrate.vsdx  environment.yml  index.html  mkdoc.sh
dev/template/: css.mako
devtools/: commands.py
docs/: build.py  conf.py  environment.yml  index.rst  indices.rst  install.rst  requirements.txt
examples/: README.md  README.rst  __init__.py  example_control.ipynb  example_deramping.ipynb  example_dsp.ipynb  example_filtering.ipynb  example_freq_tracking.ipynb  example_gnss.ipynb  example_kalman.ipynb  example_madgwick.ipynb  example_prn_processing.ipynb  example_propagation.ipynb  example_qpsk.ipynb  example_quadcopter.ipynb  example_radar.ipynb  example_sat_distance.ipynb  example_satellite.ipynb  example_zadoff.ipynb  galileo.tle  iss.tle  plot_filtering.py  plot_freq_tracking.py  plot_kalman.py  plot_madgwick.py  plot_prn_processing.py  plot_qpsk.py  plot_quadcopter.py  plot_radar.py  plot_satellite.py  plot_zadoff.py  test_kalman.py  test_tracking.py
htmldoc/: .buildinfo  blocksim.DatabaseModel.html  blocksim.LogFormatter.html  blocksim.Logger.html  blocksim.LoggerSpec.html  blocksim.Simulation.html  blocksim.constants.html  blocksim.control.Controller.html  blocksim.control.Estimator.html  blocksim.control.IMU.html  blocksim.control.Network.html  blocksim.control.Route.html  blocksim.control.Sensors.html  blocksim.control.SetPoint.html  blocksim.control.System.html  blocksim.control.html  blocksim.core.ABaseNode.html  blocksim.core.Frame.html  blocksim.core.Generic.html  blocksim.core.Node.html  blocksim.core.html  blocksim.dsp.ADSPComputer.html  blocksim.dsp.ActiveAntenna.html  blocksim.dsp.BOCMod.html  blocksim.dsp.CircularBuffer.html  blocksim.dsp.DSPAWGN.html  blocksim.dsp.DSPChannel.html  blocksim.dsp.DSPFilter.html  blocksim.dsp.DSPLine.html  blocksim.dsp.DSPSignal.html  blocksim.dsp.DSPSpectrogram.html  blocksim.dsp.DSPSpectrum.html  blocksim.dsp.DelayLine.html  blocksim.dsp.FEC.html  blocksim.dsp.NPSS.html  blocksim.dsp.OFDMA.html  blocksim.dsp.PSKMod.html  blocksim.dsp.Peak.html  blocksim.dsp.html  blocksim.dsp.klobuchar.html  (+30 more)
htmldoc/.doctrees/: blocksim.DatabaseModel.doctree  blocksim.LogFormatter.doctree  blocksim.Logger.doctree  blocksim.LoggerSpec.doctree  blocksim.Simulation.doctree  blocksim.constants.doctree  blocksim.control.Controller.doctree  blocksim.control.Estimator.doctree  blocksim.control.IMU.doctree  blocksim.control.Network.doctree  blocksim.control.Route.doctree  blocksim.control.Sensors.doctree  (+53 more)
mockup/: me_dop.py  mock_altair.py  mock_plotly.py
source/: conf.py  index.rst
tests/: TestBase.py  coverage.conf  doppler.py  galileo.tle  ntest_chaine.py  ntest_channel.py  ntest_dft.py  ntest_fec.py  ntest_npss.py  ntest_ofdm.py  ntest_plot_log.py  ntest_qpsk.py  ntest_satellite.py  ntest_serial_parallel.py  quadri.csv  requirements.txt  test_3d_plot.py  test_6dof_sys.py  test_VTOL.py  test_att_estim.py  test_channel.py  test_dft.py  test_dsp_setpoint.py  test_exceptions.py  test_fec.py  test_filter.py  test_gnss.py  test_kalman.py  test_logger.py  test_node.py  test_node2.py  test_operations.py  test_qpsk.py  test_quad.py  test_satellite.py  test_serial_parallel.py  test_setpoint.py  test_signal.py  test_spectre.py  test_stream_meas.csv  (+4 more)
(+288 files in other folders)
