[metadata]
name = blocksim
author = John Gray
author_email = manawenuz@johncloud.fr
home_page = https://gitlab.com/manawenuz/blocksim
description = A library to simulate a closed-loop system
long_description = file: README.rst
project_urls =
	Documentation = https://blocksim.readthedocs.io/en/latest/
	Source Code = https://gitlab.com/manawenuz/blocksim/
	Bug Tracker = https://gitlab.com/manawenuz/blocksim/-/issues
version = 0.1.1
license = MIT license
license_file = LICENSE
platform = any
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = find:
setup_requires =
	setuptools >=38.3.0
	wheel >=0.29.0
tests_require =
	tox

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar

[tox:tox]
envlist = py,flake8

[testenv]
passenv =
    CODECOV_*
    GITLAB_CI
    CI_BUILD_*
setenv =
	PYTHONPATH ~= {toxinidir}{:}{toxinidir}/tests
deps =
	-r tests/requirements.txt
conda_env=
    environment.yml
whitelist_externals =
	mkdir
	mv
	bash
commands =
    python --version
    # To generate the reference images:
    # python -m pytest --mpl-generate-path=tests/baseline tests
    # Once you are happy with the generated images, you should move them to a sub-directory called baseline relative to the test files
    # See https://github.com/matplotlib/pytest-mpl
	python -m pytest --mpl --mpl-generate-summary=html --mpl-results-path=results --cov blocksim tests --doctest-modules blocksim
sitepackages = true
recreate = false
