[metadata]
name = blocksim
author = John Gray
author_email = manawenuz@johncloud.fr
home_page = https://gitlab.com/manawenuz/blocksim
description = A library to simulate a closed-loop system
long_description = file: README.rst
version = 0.8.11
platform = any
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules
url = https://gitlab.com/manawenuz/blocksim
project_urls =
    Bug Tracker = https://gitlab.com/manawenuz/blocksim/issues
	Documentation = https://blocksim.readthedocs.io/en/latest/
	Source = https://gitlab.com/manawenuz/blocksim

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:
setup_requires =
	setuptools >=38.3.0
	wheel >=0.29.0
tests_require =
	tox

[options.entry_points]
console_scripts =
    blocksim = blocksim.main:main

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar

[tox:tox]
envlist = py36
requires = tox-conda
           docutils==0.18

[testenv]
passenv =
    CODECOV_*
    GITLAB_CI
    CI_BUILD_*
setenv =
	PYTHONPATH ~= {toxinidir}{:}{toxinidir}/tests
conda_channels=
   conda-forge
conda_env=
   environment_test.yml
commands =
    # To generate the reference images:
    # python -m pytest --mpl-generate-path=tests/baseline tests
    # Once you are happy with the generated images, you should move them to a sub-directory called baseline relative to the test files
    # See https://github.com/matplotlib/pytest-mpl
    python -m pytest --mpl --mpl-generate-summary=html --mpl-baseline-path=tests/baseline --mpl-results-path=results --cov blocksim tests --doctest-modules blocksim
