[metadata]
name = blocksim
author = Yann BLAUDIN DE THE
author_email = yann.blaudin-de-the@thalesaleniaspace.com
home_page = https://git:8443/projects/DNFSND/repos/blocksim/browse
description = A library to simulate a closed-loop system
long_description = file: README.md
version = 0.1.4
platform = any
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules
url = https://git:8443/projects/DNFSND/repos/blocksim/browse
project_urls =
    Bug Tracker = https://git:8443/projects/DNFSND/repos/blocksim/browse/issues
	Source = https://git:8443/projects/DNFSND/repos/blocksim/browse

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = find:
setup_requires =
	setuptools >=38.3.0
	wheel >=0.29.0

[options.entry_points]
console_scripts =
    blocksim = blocksim.main:main
blocksim =
    logger_csv = blocksim.loggers.CSVLogger
    logger_pkl = blocksim.loggers.PickleLogger
    logger_xls = blocksim.loggers.XlsLogger
    logger_psql = blocksim.loggers.PsqlLogger

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar

# Utils:
# grep -rlZ '{"dpi": 300}' tests | xargs -0 sed -i.bak 's/{"dpi": 300}/{"dpi": 150}/g'
